[project]
name = "scenario-sync"
version = "0.1.0"
description = "Portfolio monitoring for CAD-EUR investment tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "yfinance>=0.2.36",
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.2",
    "sqlalchemy>=2.0.25",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
]
